--- a/resources/main.html
+++ b/resources/main.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'">
-    <link href="./styles.css" rel="stylesheet">
+    <link href="./css/main.css" rel="stylesheet">
     <title>Phonix Client</title>
   </head>
   <body>
+    <h1>hi</h1>
     <!-- You can also require other files to run in this process -->
-    <script src="./renderer.js"></script>
   </body>
 </html>
